[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.1"]
build-backend = "setuptools.build_meta"

[project]
name = "dropbox-index"
authors = [
	{ name = "Wojciech 'KosciaK' Pietrzok", email = "kosciak@kosciak.net" },
]
maintainers = [
	{ name = "Jason R. Coombs", email = "jaraco@jaraco.com" },
]
description = "Creates index.html for directory contents shared publicly on Dropbox. Easily share whole content of the directory without the need to send separate links for each file."
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8"
dependencies = [
	"importlib_resources",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jaraco/dropbox-index"

[project.optional-dependencies]
testing = [
	# upstream
	"pytest >= 6, != 8.1.*",
	"pytest-checkdocs >= 2.4",
	"pytest-cov",
	"pytest-mypy",
	"pytest-enabler >= 2.2",
	"pytest-ruff >= 0.2.1",

	# local
	"jaraco.path",
]
docs = [
	# upstream
	"sphinx >= 3.5",
	"jaraco.packaging >= 9.3",
	"rst.linker >= 1.9",
	"furo",
	"sphinx-lint",

	# local
]

[project.scripts]
dropbox-index = "dropbox_index:run"

[tool.setuptools_scm]
