[metadata]
name = dropbox-index
author = Wojciech 'KosciaK' Pietrzok
author_email = kosciak@kosciak.net
maintainer = Jason R. Coombs
maintainer_email = jaraco@jaraco.com
description = Creates index.html for directory contents shared publicly on Dropbox. Easily share whole content of the directory without the need to send separate links for each file.
long_description = file:README.rst
url = https://github.com/jaraco/dropbox-index
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
include_package_data = true
python_requires = >=3.8
install_requires =
	importlib_resources

[options.extras_require]
testing =
	# upstream
	pytest >= 6, != 8.1.1
	pytest-checkdocs >= 2.4
	pytest-cov
	pytest-mypy
	pytest-enabler >= 2.2
	pytest-ruff >= 0.2.1

	# local
	jaraco.path

docs =
	# upstream
	sphinx >= 3.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

	# local

[options.entry_points]
console_scripts =
    dropbox-index = dropbox_index:run
